<resources>
    <string name="app_name">MessengerProject</string>
    <string name="hint_enter_messege">Сообщение</string>
    <string name="user_1">Пользователь 1</string>
    <string name="user_list">Список Пользователей</string>
    <string name="new_user">Новый пользователь</string>
    <string name="name_application">Talkers</string>
    <string name="label_create_new_dialog">Создать новый диалог</string>
    <string name="label_enter_name_dialog">Название диалога</string>
    <string name="hint_enter_name_dialog">Введите название</string>
    <string name="btn_create_dialog">Создать диалог</string>
    <string name="btn_create_user">Добавить Нового Пользователя</string>
    <string name="label_setter_image_user">Выбрать иконку пользователя</string>
    <string name="hint_enter_user_name">Введите имя</string>
    <string name="btn_agree">Подтвердить</string>
    <string name="example_text_message">Текст сообщения</string>
    <string name="example_text_big_message">КАКОЙ ТО ТЕКСТ СООБЩЕНИЯ ОЧЕНЬ ОЧЕНЬ ОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬОЧЕНЬ длинный текст сообщения</string>
    <string name="example_text_message_user">Я пользователь</string>
    <string name="example_text_message_recipient">Я получатель</string>
    <string name="example_time_message">12:34</string>
    <string name="example_username">Имя</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_ok">ОК</string>
    <string name="add_new_recipient">Добавить нового участника</string>
    <string name="delete_dialog">Удалить диалог</string>
    <string name="example_dialog_name">Пример названия диалога</string>
    <string name="label_DialogCreater">Создатель :</string>
    <string name="example_dialog_creater">Создатель диалога</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_searche_participant">Найти пользователя</string>
    <string name="btn_add_participant">Добавить участника</string>
    <string name="btn_add_participants">Добавить участников</string>
    <string name="user_role_creater">Создатель</string>
    <string name="user_role_admin">Администратор</string>
    <string name="user_role_default"></string>
    <string name="placeholder_text_username">Имя пользователя</string>
</resources>